--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,12 @@ __pycache__/
 
 logs/
 
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # vs-code
 .vscode/
