--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+click==7.1.2
+ecdsa==0.14.1
 fastapi==0.62.0
-uvicorn==0.12.3
-starlette==0.13.6
-pydantic==1.7.2
-python-jose==3.2.0
-passlib==1.7.4
-SQLAlchemy==1.3.9
-python-slugify==4.0.1
 gunicorn==20.0.4
-uvloop==0.15.2
-python-dotenv==0.15.0
+h11==0.12.0
+passlib==1.7.4
 psycopg2==2.8.6
+pyasn1==0.4.8
+pydantic==1.7.2
+python-dotenv==0.15.0
+python-jose==3.2.0
+python-slugify==4.0.1
+rsa==4.7.2
+six==1.15.0
+SQLAlchemy==1.3.9
+starlette==0.13.6
+text-unidecode==1.3
+typing-extensions==3.7.4.3
+uvicorn==0.12.3
+uvloop==0.15.2
