--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 click==7.1.2
+dnspython==2.1.0
 ecdsa==0.14.1
 email-validator==1.1.2
 fastapi==0.62.0
 gunicorn==20.0.4
 h11==0.12.0
+idna==3.1
 passlib==1.7.4
 psycopg2==2.8.6
 pyasn1==0.4.8
