--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pyasn1==0.4.8
 pydantic==1.7.2
 python-dotenv==0.15.0
 python-jose==3.2.0
+python-multipart==0.0.5
 python-slugify==4.0.1
 rsa==4.7.2
 six==1.15.0
