--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+bcrypt==3.2.0
+cffi==1.14.5
 click==7.1.2
 dnspython==2.1.0
 ecdsa==0.14.1
@@ -10,6 +12,7 @@ idna==3.1
 passlib==1.7.4
 psycopg2==2.8.6
 pyasn1==0.4.8
+pycparser==2.20
 pydantic==1.7.2
 python-dotenv==0.15.0
 python-jose==3.2.0
