--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,45 @@
 bcrypt==3.2.0
+certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
+dataclasses-json==0.5.2
 dnspython==2.1.0
 ecdsa==0.14.1
 email-validator==1.1.2
 fastapi==0.62.0
+future==0.18.2
 gunicorn==20.0.4
 h11==0.12.0
 httptools==0.1.1
-idna==3.1
+idna==2.10
+isodate==0.6.0
+marshmallow==3.11.1
+marshmallow-enum==1.5.1
+mypy-extensions==0.4.3
+oauthlib==3.1.0
 passlib==1.7.4
 psycopg2==2.8.6
 pyasn1==0.4.8
 pycparser==2.20
 pydantic==1.7.2
+PySocks==1.7.1
 python-dotenv==0.15.0
 python-jose==3.2.0
 python-multipart==0.0.5
 python-slugify==4.0.1
+python-youtube==0.7.0
+requests==2.25.1
+requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
 SQLAlchemy==1.3.9
 starlette==0.13.6
+stringcase==1.2.0
 text-unidecode==1.3
+tweepy==3.10.0
 typing-extensions==3.7.4.3
+typing-inspect==0.6.0
+urllib3==1.26.4
 uvicorn==0.12.3
-uvloop==0.15.1
+uvloop==0.15.2
