--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ marshmallow-enum==1.5.1
 mypy-extensions==0.4.3
 oauthlib==3.1.0
 passlib==1.7.4
+postmarker==0.17.1
 psycopg2==2.8.6
 pyasn1==0.4.8
 pycparser==2.20
